[project]
name = "gradio-drawing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "gradio>=6.0.2",
    "gradio-client>=2.0.1",
    "kaleido>=1.2.0",
    "plotly>=6.5.0",
    "uvicorn>=0.38.0",
]
